# marketing

./: MERGE_SUMMARY.md  Makefile
.github/: README.md
.github/workflows/: ci.yml  cucumber-tests.yml  newsletter-build.yml  newsletter-ci.yml  rust-lint.yml  rust-test.yml
.gitlab/ci/: .gitlab-ci.yml
.gitlab/ci/stages/: build.yml
.gitlab/ci/workflows/: matrix_build_docker.yml  matrix_build_helm.yml
landing/: eslint.config.js  instrumentation-client.ts  instrumentation.ts  next.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.js  tsconfig.json
landing/.cursor/rules/: components.md
landing/app/: layout.tsx  providers.tsx
landing/components/Home/: Home.tsx
landing/components/TabContent/: index.tsx
landing/ops/Helm/landing/: Chart.yaml  values.yaml
landing/ops/Helm/landing/templates/: base.yaml
landing/ops/dockerfile/: landing.Dockerfile  landing.Dockerfile.dockerignore
landing/ops/dockerfile/conf/: nginx.conf  ui.local
landing/ops/helm/landing/: Chart.yaml  values.yaml
landing/ops/helm/landing/templates/kargo/: warehouse.yaml
landing/public/assets/: styles.css
landing/types/: ui-kit.d.ts
newsletter/: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  LOGGING_IMPLEMENTATION.md  Makefile  TRAIT_BASED_INJECTION.md  buf.yaml  build.rs  docker-compose.yaml
newsletter/docs/ADR/: 0001-trait-based-dependency-injection.md
newsletter/examples/: trait_injection_demo.rs
newsletter/ops/Makefile/: dev.mk  docker.mk
newsletter/src/: lib.rs  main.rs
newsletter/src/domain/newsletter/: mod.rs
newsletter/src/infrastructure/: logging.rs  mod.rs
newsletter/src/infrastructure/db/: db.rs  db_schema.rs  mod.rs
newsletter/src/infrastructure/db/migrations/00000000000000_create_newsletters/: up.sql
newsletter/src/infrastructure/rpc/newsletter/v1/: api.proto  api.rs  api.rs.backup  mod.rs
newsletter/src/repository/newsletter/: mod.rs  postgres.rs
newsletter/src/service/newsletter/: mod.rs
newsletter/tests/: README.md  cucumber.rs  cucumber_expressions.rs  cucumber_simple.rs
newsletter/tests/features/: newsletter_crud.feature  newsletter_cucumber_expressions.feature
ops/Helm/common/: Chart.yaml
ops/Helm/common/templates/kargo/: project.yaml
ops/Helm/landing/: values.yaml
ops/Helm/landing/templates/kargo/: stage.yaml  warehouse.yaml
ops/Helm/referral/: Chart.yaml  README.md  values.yaml
ops/Helm/referral/charts/: shortlink-template-0.9.6.tgz
ops/Makefile/k8s/: common.mk  helm.mk  k8s.mk
ops/Makefile/k8s/conf/Helm/: README.md.gotmpl
ops/Makefile/k8s/scripts/: helm_lint.sh
ops/dockerfile/: landing.Dockerfile  landing.Dockerfile.dockerignore
ops/dockerfile/conf/: nginx.conf
referral/: Makefile  pyproject.toml  requirements.txt
report/: go.mod  go.sum
report/di/: wire.go
scripts/: merge-cucumber-features.sh  validate-cucumber-implementation.sh
stats/: conanfile.py
ui/: package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
