cargo-features = []

[package]
name = "newsletter"
version = "0.1.0"
rust-version = "1.89"
authors = ["Login Victor <batazor111@gmail.com>"]
keywords = ["newsletter"]
readme = "README.md"
edition = "2021"
repository = "https://github.com/shortlink-org/shortlink"

[dependencies]
futures = { version = "0.3.31", default-features = true, features = ["async-await"] }
hyper = { version = "1.0.0", features = ["full"] }
tokio = { version = "1.44.1", features = ["full", "macros", "rt-multi-thread"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_derive = "1.0.219"
route-recognizer = "0.3.1"
bytes = "1.10.1"
async-trait = "0.1.88"
pretty_env_logger = "0.5"
tera = "1.20.0"
env_logger = "0.11.7"
dotenv = "0.15.0"
postgres = "0.19.10"
tokio-postgres = { version = "^0.7.13" }
refinery = { version = "0.8.15", features = ["tokio-postgres"] }
hyper-util = "0.1.10"
http-body-util = "0.1.3"
log = "0.4.26"
tonic = { version = "0.14.2", features = ["tls-native-roots"] }
prost = "0.14.1"
prost-types = "0.14.1"
tonic-build = "0.14.2"

[dependencies.uuid]
features = ["serde", "v4"]
version = "1.16.0"

[profile.dev]
debug = 0

[profile.test]
debug = 0

[target.'cfg(unix)'.dependencies]
rlimit = "0.10.2"

[profile.release]
lto = "fat"
codegen-units = 1
panic = 'abort'
